To publish a notification, just add any xref:technical-guide:working-with-data/data-object.adoc[Data Object] to the notification registry for a topic.

Learn more about the usage and functionality in the chapter xref:technical-guide:working-with-data/ui-notifications.adoc[UI Notifications].

== Accessibility

We are excited to announce the introduction of enhanced accessibility features in Scout.
This improves the overall user experience for individuals with diverse abilities, ensuring Scout applications are more inclusive and user-friendly.
Scout now includes comprehensive WAI-ARIA support to provide additional information to assistive technologies.
ARIA roles, properties, and states have been implemented to convey the purpose and state of most of Scout's widgets.
Very few complex widgets still lack a comprehensive WAI-ARIA support as these widgets require new concepts of interaction to be completely accessible.

To get familiar with Scouts new accessibility features we recommend using `aria.ts` as a starting point.

== Login form: Add support for second-factor (form-based)

For the form-based login box a basic second-factor support was added.
To verify the second factor a second credential verifier must be registered via `FormBasedAuthConfig#withSecondFactorVerifier`.

== Scout App as embedded Jetty Server to run in a productive environment

The former `org.eclipse.scout.dev.jetty.JettyServer` (now `Application`) was so far only used for development environments.
With this release it was improved so that it can be used in a productive environment too.
The Scout Application class (`org.eclipse.scout.rt.app.Application`) contains a main-method which may be started directly and itself starts an embedded Jetty server.
Therefore, an application server isn't required anymore.
See the migration guide for further information.